Implement add product from web

--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -5,6 +5,9 @@
 <h2>Productos</h2>
 
 <table style="width:100%">
+  <a href="/upload_product.html">Nuevo producto</a>
+  &nbsp;
+
   <tr>
     {{#product}}
     <td><a href="/productos/{{id}}" style="text-align: center;"><img src="{{url}}" style="max-width: 35%;">
