--- a/src/main/resources/templates/product_added.html
+++ b/src/main/resources/templates/product_added.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Producto almacenado</title>
 </head>
 <body>
-
+    <a href="/productos/{{id}}">Ver producto</a>
 </body>
 </html>
