--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -28,7 +28,7 @@
 <br>
 <h3>Escribir reseña sobre este producto</h3>
 <form action="/productos/{{id}}/nuevaReview" method="post">
-	<textarea name='reviewText' rows=5 cols=40></textarea> 
+	<textarea minlength=10 name='reviewText' rows=5 cols=40></textarea>
 	<input type='hidden' value={{product.id}} name='productId'>
 	<input type='hidden' value="{{id}}">
 	<br>
