Show discount on product details

--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -13,6 +13,7 @@
     <td><a href="/productos/{{id}}" style="text-align: center;"><img src="{{url}}" style="max-width: 35%;">
     <br>{{name}}
       <br>{{price}}€
+<!--      <br>{{#promotion}}{{promotion}}% descuento{{/promotion}}-->
     </a></td>
     {{/product}}
   </tr>
