--- a/src/main/resources/templates/user_profile.html
+++ b/src/main/resources/templates/user_profile.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
 </head>
 <body>
-	<h1>Perfil de {{user.username}}</h1>
-	&nbsp Nombre: {{user.name}}
-	<h4>Datos</h4>
-	<br>&nbsp Email: {{user.email}}
-	<br>&nbsp Pedidos:
-	{{#user.orders.length}}
-	{{#user.orders}}
-    	<h4>{{id}}</h4>
-    	{{#products}}
-    	<p>{{name}}</p>
-    	{{/products}}
-    {{/user.orders}}
-    {{/user.orders.length}}
-        
-	<br>
-	<br>
- 	<a href="/productos"> <button>Seguir comprando </button> </a>
- 	<br>
- 	<br>
- 	<a href="/productos"> <button>Cerrar sesión </button> </a>
- 	
+<h1>Perfil de {{user.username}}</h1>
+&nbsp Nombre: {{user.name}}
+<h4>Datos</h4>
+<br>&nbsp Email: {{user.email}}
+<br>&nbsp Pedidos:
+{{#user.orders.length}}
+{{#user.orders}}
+<h4>{{id}}</h4>
+{{#products}}
+<p>{{name}}</p>
+{{/products}}
+{{/user.orders}}
+{{/user.orders.length}}
+
+<br>
+<br>
+<a href="/productos">
+    <button>Seguir comprando</button>
+</a>
+<br>
+<br>
+<a href="/productos">
+    <button>Cerrar sesión</button>
+</a>
+
 </body>
 </html>
