--- a/src/main/resources/templates/product_added.html
+++ b/src/main/resources/templates/product_added.html
@@ -5,6 +5,8 @@
     <title>Producto almacenado</title>
 </head>
 <body>
+<a href="/productos">Ir a productos</a>
+<br>
 <a href="/productos/{{id}}">Ver producto</a>
 </body>
 </html>
