--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -4,18 +4,38 @@
 
 <h2>Productos</h2>
 
-<table style="width:100%">
-    <a href="/upload_product.html">Nuevo producto</a>
-    &nbsp;
 
+<table style="width:20%">
     <tr>
-        {{#product}}
-        <td><a href="/productos/{{id}}" style="text-align: center;"><img src="{{url}}" style="max-width: 35%;">
+        <td style="text-align:justify">
+            <a href="/login.html">Login</a>
+        </td>
+
+        <td style="text-align:justify">
+            <a href="/signup.html">Registrarse</a>
+        </td>
+
+        <td style="text-align:justify">
+            <a href="/upload_product.html">Nuevo producto</a>
+        </td>
+    </tr>
+</table>
+<br>
+<br>
+<br>
+<br>
+
+<table style="width:50%">
+    {{#product}}
+    <tr>
+        <td><a href="/productos/{{id}}" style="text-align: center;"><img src="{{url}}" style="max-width: 40%;"></a></td>
+
+        <td><a href="/productos/{{id}}" style="text-align: left;">
             <br>{{name}}
             <br>{{price}}€
         </a></td>
-        {{/product}}
     </tr>
+    {{/product}}
 </table>
 
 </body>
