controlador eliminar producto

--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -17,6 +17,8 @@
 </table>
 
 <button type="button">Añadir al carrito</button>
+<button type="button" onclick="location.href='/eliminar/{{id}}'">Eliminar Producto</button>
+
 <br>
 <br>
 
