Fix product removal

--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -17,7 +17,7 @@
 </table>
 
 <button type="button">Añadir al carrito</button>
-<button type="button" onclick="location.href='/eliminar/{{id}}'">Eliminar Producto</button>
+<button type="button" onclick="location.href='/eliminar/{{product.id}}'">Eliminar Producto</button>
 
 <br>
 <br>
