--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -25,15 +25,18 @@
 <br>
 <br>
 
-  <tr>
+<table style="width:50%">
     {{#entrySet}}
-    <td><a href="/productos/{{key.id}}" style="text-align: center;"><img src="{{key.url}}" style="max-width: 35%;">
-    <br>{{key.name}}
-      <br>{{key.price}}€
-      <br>{{#value}}{{value.promotion}}% descuento{{/value}}
-    </a></td>
+    <tr>
+        <td><a href="/productos/{{key.id}}" style="text-align: center;"><img src="{{key.url}}" style="max-width: 35%;"></a></td>
+
+        <td><a href="/productos/{{key.id}}" style="text-align: left;">
+            <br>{{key.name}}
+            <br>{{key.price}}€
+            <br>{{#value}}{{value.promotion}}% descuento{{/value}}
+        </a></td>
+    </tr>
     {{/entrySet}}
-  </tr>
 </table>
 
 </body>
