Add link to user profile

--- a/src/main/resources/templates/reviewAdded.html
+++ b/src/main/resources/templates/reviewAdded.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Insert title here</title>
+    <title>Review almacenada</title>
 </head>
 <body>
 <h2>Comentario añadido correctamente</h2>
