--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -4,7 +4,6 @@
 
 <h2>Productos</h2>
 
-
 <table style="width:20%">
     <tr>
         <td style="text-align:justify">
@@ -13,6 +12,10 @@
 
         <td style="text-align:justify">
             <a href="/signup.html">Registrarse</a>
+        </td>
+
+        <td style="text-align:justify">
+            <a href="/profile">Perfil</a>
         </td>
 
         <td style="text-align:justify">
