--- a/src/main/resources/templates/user_profile.html
+++ b/src/main/resources/templates/user_profile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Insert title here</title>
+    <title>Perfil</title>
 </head>
 <body>
 <h1>Perfil de {{user.username}}</h1>
