--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -12,7 +12,7 @@
             <br>Precio: {{product.price}}€
             <br>Stock: {{product.stock}} unidades
             <br>Descripción: {{product.description}}
-            <br>{{#promotion.promotion}}Oferta: {{promotion.promotion}}% descuento{{/promotion.promotion}}
+            <br>{{#product.promotion}}Oferta: {{product.promotion.promotion}}% descuento{{/product.promotion}}
         </td>
     </tr>
 </table>
