--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h2>Productos</h2>
+<h2><a href="/productos">Productos</a></h2>
 
-<table style="width:20%">
+<table style="width:30%">
     <tr>
         <td style="text-align:justify">
             <a href="/login.html">Login</a>
@@ -20,6 +20,13 @@
 
         <td style="text-align:justify">
             <a href="/upload_product.html">Nuevo producto</a>
+        </td>
+        
+        <td>
+        	<form action="/busqueda" method="POST">
+        		<input type="search" name="name" placeholder="Buscar" minlength="2">
+        		<input type="submit" name="submit" value="buscar">
+        	</form>
         </td>
     </tr>
 </table>
