--- a/src/main/resources/templates/upload_product.html
+++ b/src/main/resources/templates/upload_product.html
@@ -21,7 +21,12 @@
 
   
   <label for="category">Categoría:</label>
-  <input minlength="2" id="category" name="category" type="text"><br><br>
+  <input list="categories">
+  <datalist id="categories">
+  		{{#categories}}
+  			<option value="{{name}}">
+  		{{/categories}}
+  </datalist>
   
   <label for="url">Imagen URL:</label>
   <input id="url" name="url" type="url"><br><br>
