--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -22,6 +22,10 @@
             <a href="/upload_product.html">Nuevo producto</a>
         </td>
         
+        <td style="text-align:justify">
+            <a href="/new_order">Realizar un pedido</a>
+        </td>
+        
         <td>
         	<form action="/busqueda" method="POST">
         		<input type="search" name="name" placeholder="Buscar" minlength="2">
