--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -7,7 +7,7 @@
 <table style="width:40%">
     <tr>
         <td style="text-align:justify">
-            <a href="/login.html">Login</a>
+            <a href="/login">Login</a>
         </td>
 
         <td style="text-align:justify">
