--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -11,7 +11,11 @@
         </td>
 
         <td style="text-align:justify">
-            <a href="/signup.html">Registrarse</a>
+            <form action="/signup" method="POST">
+                <input type="hidden" name="_csrf" value="{{token}}"/>
+
+        		<input type="submit" name="submit" value="Registrarse">
+        	</form>
         </td>
 
         <td style="text-align:justify">
