Download invoice from MVC

--- a/src/main/resources/templates/user_profile.html
+++ b/src/main/resources/templates/user_profile.html
@@ -15,8 +15,14 @@
 {{#products}}
 <p>{{name}}</p>
 {{/products}}
+<br>
+<a href="/factura/{{id}}">
+    <button>Generar factura</button>
+</a>
 {{/user.orders}}
 
+<br>
+<br>
 <br>
 <br>
 <a href="/productos">
